--- a/TravelSite/TravelSite/Views/Booking/BookingList.cshtml
+++ b/TravelSite/TravelSite/Views/Booking/BookingList.cshtml
@@ -18,7 +18,7 @@
 		<div class="mb-5">
 			@foreach (var group in Model.GroupBy(c => c.User?.Email).ToList())
 			{
-				<div class="card mb-1 w-75 m-auto">
+				<div class="card mb-1 w-50 m-auto">
 					<label class="fw-bold fs-6">Бронирования @group.Key :</label>
 					@foreach (var booking in group)
 					{
@@ -26,12 +26,13 @@
 							<a class="text-decoration-none" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="GetBooking">
 								<span class="badge bg-warning text-light mb-1">@booking.BookingNumber</span>
 							</a>
-							<div style="color:darkgray; align-content:start">@booking.User?.UserName</div>
-							<div style="color:darkgray; align-content:start">@booking.Travel?.Name</div>
-							<div style="color:darkgray; align-content:start">@booking.BookDate</div>
-							<div style="color:darkgray; align-content:start">@booking.BookingStatus</div>
-							<div style="color:darkgray; align-content:start">@booking.From</div>
-							<div style="color:darkgray; align-content:start">@booking.To</div>
+							@if(booking.User!=null&&booking.Travel!=null)
+							{
+								<div style="color:darkgray; align-content:start">@booking.User.UserName</div>
+								<div style="color:darkgray; align-content:start">@booking.Travel.Name</div>
+							}
+							<div style="color:darkgray; align-content:start">с @booking.From</div>
+							<div style="color:darkgray; align-content:start">по @booking.To</div>
 						</div>
 					}
 				</div>
@@ -44,21 +45,20 @@
 		if (bookings.Count != 0)
 		{
 			<div class="mb-5">
-				<label class="fw-bold fs-5">Все заказы</label>
+				<label class="fw-bold fs-5">Все бронирования</label>
 				@foreach (var booking in Model.Where(x => x.User?.Id == userManager.GetUserId(User)).ToList())
 				{
-					<div class="card mb-1">
-						<a class="text-decoration-none" method=get asp-area="" asp-controller="Travel" asp-route-id="@booking.Id" asp-action="GetTravel">
-							<span class="badge bg-warning text-light mb-1">@booking.Id</span>
+					<div class="card mb-1 w-50">
+						<a class="text-decoration-none" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="GetBooking">
+							<span class="badge bg-warning text-light mb-1">@booking.BookingNumber</span>
 						</a>
-						<div style="color:darkgray; align-content:start">@booking.?User.UserName</div>
-						<div style="color:darkgray; align-content:start">@booking.?Travel.Name</div>
-						<div style="color:darkgray; align-content:start">@booking.BookDate</div>
-						<div style="color:darkgray; align-content:start">@booking.BookingStatus</div>
-						<div style="color:darkgray; align-content:start">@booking.From</div>
-						<div style="color:darkgray; align-content:start">@booking.To</div>
+						@if (booking.User != null && booking.Travel != null)
+						{
+							<div style="color:darkgray; align-content:start">@booking.Travel.Name</div>
+						}
+						<div style="color:darkgray; align-content:start">с @booking.From</div>
+						<div style="color:darkgray; align-content:start">по @booking.To</div>
 					</div>
-					<a class="" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="EditBooking">Редактировать</a>
 				}
 			</div>
 		}
